WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
213666
Crash at WebKit: __62-[WKContentView(WKInteraction) resignFirstResponderForWebView]_block_invoke
https://bugs.webkit.org/show_bug.cgi?id=213666
Summary
Crash at WebKit: __62-[WKContentView(WKInteraction) resignFirstResponderForWe...
David Kilzer (:ddkilzer)
Reported
2020-06-26 15:48:22 PDT
Crash at WebKit: __62-[WKContentView(WKInteraction) resignFirstResponderForWebView]_block_invoke. Thread 0 name: Dispatch queue: com.apple.main-thread Thread 0 Crashed ↩: 0 WebKit 0x000000019fa14c04 __62-[WKContentView(WKInteraction) resignFirstResponderForWebView]_block_invoke + 168 (RetainPtr.h:102) 1 WebKit 0x000000019fa14bf4 __62-[WKContentView(WKInteraction) resignFirstResponderForWebView]_block_invoke + 152 (APIObject.mm:109) 2 libdispatch.dylib 0x0000000196a3089c _dispatch_call_block_and_release + 32 3 libdispatch.dylib 0x0000000196a32394 _dispatch_client_callout + 20 4 libdispatch.dylib 0x0000000196a3f6ec _dispatch_main_queue_callback_4CF + 836 5 CoreFoundation 0x0000000196d12bf0 __CFRUNLOOP_IS_SERVICING_THE_MAIN_DISPATCH_QUEUE__ + 16 6 CoreFoundation 0x0000000196d0d1d0 __CFRunLoopRun + 1936 7 CoreFoundation 0x0000000196d0c630 CFRunLoopRunSpecific + 564 [...] <
rdar://problem/64238661
>
Attachments
Patch v1
(1.62 KB, patch)
2020-06-26 15:53 PDT
,
David Kilzer (:ddkilzer)
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
David Kilzer (:ddkilzer)
Comment 1
2020-06-26 15:53:39 PDT
Created
attachment 402917
[details]
Patch v1
EWS
Comment 2
2020-06-26 18:16:27 PDT
Committed
r263607
: <
https://trac.webkit.org/changeset/263607
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 402917
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug