Crash at WebKit: __62-[WKContentView(WKInteraction) resignFirstResponderForWebView]_block_invoke <https://webkit.org/b/213666> <rdar://problem/64238661>

Reviewed by Darin Adler.

* UIProcess/ios/WKContentViewInteraction.mm:
(-[WKContentView resignFirstResponderForWebView]):
- Speculative fix to return early if there are no queued key
  events available by the time the block runs.


Canonical link: https://commits.webkit.org/226472@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@263607 268f45cc-cd09-0410-ab3c-d52691b4dbfc